--- a/src/scenes/App.css
+++ b/src/scenes/App.css
@@ -1,5 +1,17 @@
-@import '~antd/dist/antd.css';
+@import "~antd/dist/antd.css";
 
-/* .App {
+.App {
+  background-color: #ffffff;
   text-align: center;
-} */
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute
+}
+
+.box {
+  max-width: 600px;
+  margin: auto;
+  padding: auto;
+}
